Tests/CompilerTests/negative/illegal-stored-properties.hylo
//! no-std

struct S<T> {
  static let bar: Void = ()
}

enum E<T> {
  let foo: Void
  static let bar: Void = ()
}
